# nix-fleet

./: .harper-dictionary.txt  Cargo.toml  Justfile  LICENSE-Apache-2.0  LICENSE-MIT  NOTES.md  README.md  codebook.toml  deny.toml  flake.nix  rust-toolchain.toml
fixtures/: admin.ed25519  admin.ed25519.pub  agent.ed25519  agent.ed25519.pub  coordinator.ed25519  coordinator.ed25519.pub
nix/: formatter.nix
nix/devshells/: default.nix  rust.nix
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
