[workspace]
resolver = "2"
package.version = "0.1.0"
metadata.crane.name = "blueprint-universe"

members = ["rust/*"]

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.11.5"
log = "0.4.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rand = "^0.8.4"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
