[workspace]
resolver = "2"
package.version = "0.1.0"
package.license = "MIT OR Apache-2.0"
metadata.crane.name = "flt"

members = ["rust/*"]

[workspace.dependencies]
anyhow = "1.0"
tracing = {version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rand = "^0.8.4"
clap = { version = "4.5.47", features = ["derive", "env", "string", "cargo"] }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
