[package]
name = "app"
edition = "2021"
license = "CAL-1.0"
version.workspace = true

[dependencies]
lib = { path = "../lib" }

anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.47", features = ["derive", "env", "string", "cargo"] }
clap_derive = { version = "4.0.0-rc.1" }
