[package]
name = "lib"
edition = "2021"
license = "CAL-1.0"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

iroh = { version = "0.91.2", features = ["discovery-local-network"] }
serde = "1.0.219"
serde_json = "1.0.143"
mid = { version = "3.0.7", features = ["serde"] }
os_info = { version = "3.12.0", features = ["serde"] }
platforms = { version = "3.6.0", features = ["serde"] }
better-commands = "1.0.2"
jsonpath-rust = "1.0.4"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
data-encoding = "2.9.0"
