[package]
name = "lib"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
tracing =  { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

iroh = { version = "0.91.2", features = ["discovery-local-network"] }
serde = "1.0.219"
serde_json = "1.0.143"
mid = { version = "3.0.7", features = ["serde"] }
os_info = { version = "3.12.0", features = ["serde"] }
platforms = { version = "3.6.0", features = ["serde"] }
better-commands = "1.0.2"
jsonpath-rust = "1.0.4"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
data-encoding = "2.9.0"
tokio-util = { version = "0.7.16", features = ["io"] }
blake3 = "1.8.2"
